# CosmOS

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.md  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: detailed_explanation.instructions.md
.github/workflows/: build-image.yml  main.yml  mirror-main-to-gitlab.yml
bootloader/loongarch64-direct/: Cargo.toml  build.rs  linker.ld
bootloader/loongarch64-direct/.cargo/: config.toml
bootloader/loongarch64-direct/src/: main.rs
ci/: Dockerfile
docs/: cache_benchmark_scenarios.md  gen_cosmos_ppt.py  gen_fs_charts.py  gen_fs_fastpath_chart.py  page_cache_todo.md  perf_probe_suite.md  signal_todo.md
fs/: Cargo.toml
fs-fuse/: Cargo.toml
fs-fuse/src/: main.rs  source.rs
fs-fuse/src/pack/: easyfs.rs  ext4.rs  fat32.rs  mod.rs
fs/src/: block_cache.rs  block_dev.rs  dentry_cache.rs  errno.rs  inode_cache.rs  lib.rs  lock.rs  sleep_mutex.rs  vfs.rs
fs/src/easyfs/: bitmap.rs  efs.rs  inode.rs  layout.rs  mod.rs
fs/src/ext4/: mod.rs
fs/src/fat32/: bpb.rs  dir.rs  fat.rs  inode.rs  mod.rs
os/: Cargo.toml  Makefile  build.rs
os/cargo-config/: config.toml
os/src/: bootinfo.rs  config.rs  console.rs  entry.asm  hart.rs  ipc.rs  keys.rs  klog.rs  lang_items.rs  linker-loongarch64.ld  logging.rs  main.rs  perf_probe.rs  perf_sampler.rs  poll.rs  random.rs  sbi.rs  timer.rs
os/src/arch/: mod.rs
os/src/arch/loongarch64/: entry.S  entry.rs  hart.rs  mod.rs  paging.rs  switch.S  switch.rs  trap.S  trap.rs
os/src/arch/riscv/: address.rs  entry.asm  entry.rs  hart.rs  mod.rs  paging.rs  switch.rs  trap.rs
os/src/boards/: loongarch_virt.rs  qemu.rs
os/src/drivers/: mod.rs  pci.rs  plic.rs  rtc.rs
os/src/drivers/block/: mod.rs  virtio_blk.rs
os/src/drivers/chardev/: mod.rs  ns16550a.rs
os/src/drivers/net/: mod.rs  virtio_net.rs
os/src/drivers/virtio/: mod.rs
os/src/fs/: cgroupfs.rs  devfs.rs  inode.rs  mod.rs  page_cache.rs  pipe.rs  procfs.rs  rootfs.rs  stdio.rs  sysfs.rs  tmpfs.rs  tty.rs
os/src/hal/: mod.rs  traits.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  oom.rs  page_table.rs  tlb_deferred.rs  tlb_shootdown.rs
os/src/net/: af_alg.rs  compat.rs  compat_socket.rs  loopback.rs  mod.rs  raw_ipv6.rs  socket_timeout.rs  tcp.rs  udp.rs  unix_socket.rs
os/src/platform/: loongarch_virt.rs  mod.rs
os/src/platform/loongarch/: mod.rs
os/src/platform/loongarch/qemu_virt/: board.rs  irq.rs  mod.rs  pci.rs  rtc.rs
os/src/platform/loongarch_virt/: irq.rs  pci.rs
os/src/platform/qemu_virt/: mod.rs  sbi.rs
os/src/platform/riscv/: mod.rs
os/src/platform/riscv/qemu_virt/: board.rs  mod.rs  rtc.rs  sbi.rs
os/src/sched/: api.rs  autogroup.rs  context.rs  manager.rs  mod.rs  policy.rs  processor.rs  runqueue.rs  switch.rs
os/src/signal/: action.rs  mod.rs  signals.rs  wait.rs
os/src/sync/: condvar.rs  deadlock.rs  fs_sleep_mutex.rs  futex.rs  mod.rs  mutex.rs  semaphore.rs  sleep_mutex.rs  spin.rs  up.rs
os/src/syscall/: errno.rs  fs.rs  key.rs  mman.rs  mod.rs  net.rs  process.rs  random.rs  resource.rs  sched.rs  signal.rs  sync.rs  thread.rs  times.rs  utils.rs
os/src/task/: action.rs  context.rs  id.rs  manager.rs  mod.rs  process.rs  processor.rs  signal.rs  switch.S  task.rs  wait_queue.rs
os/src/trap/: context.rs  irq.rs  mod.rs  trap.S
scripts/: export-eval-tree.sh  pack-disk-img.sh
test/: ltp_result_summary.py  memory_trace_plot.ipynb  run_ltp_host.sh  tcp_server_test.py  tcp_syn_flood_test.py  test_ltp.sh  tmp.ipynb
user/: Cargo.toml  Makefile  build.py  rust-toolchain.toml
user/cargo-config/: config.toml
user/src/: console.rs  lib.rs  linker-loongarch64.ld  net.rs  syscall.rs
