[package]
name = "fs-fuse"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.54"
fs = { path = "../fs" }
rand = "0.9.2"
fatfs = { version = "0.3", features = ["std"] }

# [features]
# board_qemu = []
# board_k210 = []