[package]
name = "fs"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.7.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
ext4_rs = { path = "src/ext4_rs" }
log = "0.4"
bitflags = "1.3.2"

[profile.release]
debug = true

[features]
board_qemu = []
board_k210 = []
io_perf_counters = []
kernel_sleep_mutex = []
# Cache bypass features — enable to disable the corresponding cache for
# benchmarking its performance contribution in isolation.
no_block_cache = []
no_inode_cache = []
no_dentry_cache = []
no_stat_cache = []

default = ["io_perf_counters"]
