[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
virtio-drivers = "0.12.0"
fs = { path = "../fs" }
hashbrown = "0.12.3"
smoltcp = { git = "https://github.com/KyleMao2023/smoltcp", branch = "udp-fix", default-features = false, features = [
	"alloc",
	"medium-ethernet",
	"proto-ipv4",
	"proto-ipv4-fragmentation",
	"socket-udp",
	"socket-tcp",
	"fragmentation-buffer-size-16384",
] }
strum_macros = "0.28.0"

[features]
fat32 = []
easyfs = []
ext4 = []
default = ["ext4"]
