[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { path = "../vendor/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
virtio-drivers = "0.12.0"
# fs = { path = "../fs" }
fs = { path = "../fs", default-features = false, features = ["io_perf_counters", "kernel_sleep_mutex"] }
hashbrown = "0.12.3"
smoltcp = { path = "../vendor/smoltcp", default-features = false, features = [
	"alloc",
	"medium-ethernet",
	"proto-ipv4",
	"proto-ipv6",
	"proto-ipv4-fragmentation",
	"socket-udp",
	"socket-tcp",
	"iface-max-addr-count-4",
	"fragmentation-buffer-size-16384",
] }
strum_macros = "0.28.0"

[features]
fat32 = []
easyfs = []
ext4 = []
platform-qemu-virt = []
io_perf_counters = []
net_perf_counters = []
mm_perf_counters = []
oom_diagnostics = []
perf_probe = []
legacy-vdb-names = []
sched_invariant_checks = []
default = ["ext4", "platform-qemu-virt", "net_perf_counters", "mm_perf_counters", "legacy-vdb-names"]
